# DtMFbutDTMF

./: main.py  pyproject.toml  ruff.toml  ty.toml
src/dtmf_but_dtmf/: __init__.py  main.py
tests/: main.py
tests/dtmf_but_dtmf/: main.py
