# Copyright (c) 2026 Logan Mamanakis.

# This file is part of dtmf_but_dtmf.
# (see https://github.com/Theinatorinator/DtMFbutDTMF).

# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU Affero General Public License as
# published by the Free Software Foundation, either version 3 of the
# License, or any later version.

# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU Affero General Public License for more details.

# You should have received a copy of the GNU Affero General Public License
# along with this program. If not, see <http://www.gnu.org/licenses/>.

[project]
name = "dtmfbutdtmf"
version = "0.0.0"
description = "Turn music into DTMF tone covers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
xfail_strict = true
filterwarnings = [
  "error",
  "ignore::DeprecationWarning",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.14",
]
